test/classes/override/where-no-override.good
where-no-override.chpl:8: error: Child.f override keyword required for method matching signature of superclass method
